<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/optionsInquiry"
        app:showAsAction="never"
        android:title="@string/options_inquiry"
        />
    <item
        android:id="@+id/translation"
        app:showAsAction="never"
        android:title="@string/options_translate" />

    <item
        android:id="@+id/emergency"
        app:showAsAction="never"
        android:title="@string/options_emergency" />

    <item
        android:id="@+id/passreset"
        app:showAsAction="never"
        android:title="@string/options_reset"/>

    <item
        android:id="@+id/mapssdk"
        app:showAsAction="never"
        android:title="@string/options_maps"/>

</menu>